# yapykaldi_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: yapykaldi_hmi.launch
scripts/: yapykaldi_hmi_node
src/yapykaldi_ros/: __init__.py  cfg_kaldi_grammar.py  hmi_server_yapykaldi.py  rospy_logging.py
